chore: improve VS Code task dependency chain for CI compliance
- Build task now depends on Format and Verify (CI Check)
- Format and Verify depends on Format Code (Pre-commit)
- Creates dependency chain: Format → Verify → Build
- Ensures local development matches CI/CD requirements
- Prevents formatting-related CI failures

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
 				"build"
 			],
 			"group": "build",
+			"dependsOn": "Format and Verify (CI Check)",
 			"problemMatcher": [
 				"$msCompile"
 			]
@@ -23,6 +24,7 @@
 				"src/GanttComponents/"
 			],
 			"group": "build",
+			"dependsOn": "Build",
 			"isBackground": true,
 			"problemMatcher": []
 		},
@@ -57,6 +59,7 @@
 				"diagnostic"
 			],
 			"group": "test",
+			"dependsOn": "Format Code (Pre-commit)",
 			"presentation": {
 				"echo": true,
 				"reveal": "always",
