--- a/src/GanttComponents/GanttComponents.csproj
+++ b/src/GanttComponents/GanttComponents.csproj
@@ -4,7 +4,18 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\GanttResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>GanttResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\GanttResources.zh-CN.resx">
+      <DependentUpon>GanttResources.resx</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
