--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "BlazorGantt Timeline Zoom Demo",
-  "image": "mcr.microsoft.com/dotnet/sdk:8.0",
+  "image": "mcr.microsoft.com/devcontainers/dotnet:8.0",
   
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
