chore: add SQLite database files to .gitignore
- Add *.db, *.db-shm, *.db-wal patterns to prevent tracking SQLite database files
- Prevents unnecessary noise in git status from temporary database files

--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,12 @@ ClientBin/
 *~
 *.dbmdl
 *.dbproj.schemaview
+
+# SQLite database files
+*.db
+*.db-shm
+*.db-wal
+
 *.jfm
 *.pfx
 *.publishsettings
