feat: implement future-proof task centering with DOM-based positioning
- Replace fragile SVG coordinate calculations with robust DOM-based centering
- Add DOM-based centerTaskById function using getBoundingClientRect()
- Fix duplicate data-task-id issue (removed from background rows)
- Prevent infinite selection loops with SelectTaskInternal(notifyParent param)
- Implement left-border centering for more intuitive task positioning
- Add cross-component selection between TaskGrid and TimelineView
- Create comprehensive future-proofing documentation

Changes:
- TimelineView: DOM-based centering, public SelectTask methods
- GanttComposer: Component references, loop prevention
- JavaScript: Specific CSS selectors, graceful error handling
- Documentation: Complete architectural analysis and maintenance guidelines

Fixes: Task centering now works reliably in both standalone and composed contexts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,4 @@
 {
     "terminal.integrated.shellIntegration.enabled": true,
-    "terminal.integrated.shellIntegration.decorationsEnabled": "both",
-    "terminal.integrated.shellIntegration.history": 100,
-    "terminal.integrated.profiles.windows": {
-        "PowerShell": {
-            "source": "PowerShell",
-            "icon": "terminal-powershell"
-        },
-        "Command Prompt": {
-            "path": [
-                "${env:windir}\\Sysnative\\cmd.exe",
-                "${env:windir}\\System32\\cmd.exe"
-            ],
-            "args": [],
-            "icon": "terminal-cmd"
-        },
-        "Git Bash": {
-            "path": "C:\\Users\\LQR\\AppData\\Local\\Programs\\Git\\bin\\bash.exe",
-            "args": ["--login", "-i"],
-            "icon": "terminal-bash"
-        }
-    },
-    "terminal.integrated.defaultProfile.windows": "Git Bash",
-    "terminal.integrated.automationProfile.windows": {
-        "path": "C:\\Users\\LQR\\AppData\\Local\\Programs\\Git\\bin\\bash.exe",
-        "args": ["--login"]
-    },
-    "terminal.integrated.shellIntegration.suggestEnabled": true,
-    "terminal.integrated.enablePersistentSessions": false
+    "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
